--- a/final/02-HTML/index.html
+++ b/final/02-HTML/index.html
@@ -2,17 +2,24 @@
 <html lang="uz">
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>Asosiy sahifa</title>
   </head>
   <body>
     <header>
       <nav>
         <a href="login.html">Login</a>
         <a href="profile.html">Profil</a>
-        <a href="#">Artikllar</a>
-        <a href="#">Foydalanuvchilar</a>
+        <a href="https://uz.wikipedia.org/wiki/Bosh_Sahifa">Artikllar</a>
       </nav>
-      <h1><img src="media/download.jpg" alt="vikipediya logosi" width="40" height="50"> Vikipediyaga xush kelibsiz</h1>
+      <h1>
+        <img
+          src="media/download.jpg"
+          alt="vikipediya logosi"
+          width="40"
+          height="50"
+        />
+        Vikipediyaga xush kelibsiz
+      </h1>
     </header>
     <article>
       <h2>HTML nima?</h2>
@@ -30,7 +37,12 @@
         unga qo'shimcha multimedia (tasvir, tovush, animatsiya va boshqalar)
         imkoniyatlari qo'shildi.
       </p>
-      <img src="media/htmlcode.jpg" alt="html kod rasmi" width="100%" height="300px">
+      <img
+        src="media/htmlcode.jpg"
+        alt="html kod rasmi"
+        width="100%"
+        height="300px"
+      />
     </article>
 
     <aside>
@@ -67,20 +79,21 @@
           <td>12,450</td>
         </tr>
         <tr>
-            <td>2</td>
-            <td>rubl</td>
-            <td>139</td>
-          </tr> <tr>
-            <td>3</td>
-            <td>yuan</td>
-            <td>1,730.16 </td>
-          </tr>
+          <td>2</td>
+          <td>rubl</td>
+          <td>139</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>yuan</td>
+          <td>1,730.16</td>
+        </tr>
       </table>
     </article>
 
     <section>
-        <h2>Qaynoq yangiliklar</h2>
-        <video src="media/fire.mp4" width="400" autoplay muted controls></video>
+      <h2>Qaynoq yangiliklar</h2>
+      <video src="media/fire.mp4" width="400" autoplay muted controls></video>
     </section>
     <footer>Mualliflik huquqi &copy; 2024-yil Vikipediya</footer>
   </body>
