--- a/final/02-HTML/index.html
+++ b/final/02-HTML/index.html
@@ -9,7 +9,8 @@
       <nav>
         <a href="login.html">Login</a>
         <a href="profile.html">Profil</a>
-        <a href="https://uz.wikipedia.org/wiki/Bosh_Sahifa">Artikllar</a>
+        <a href="https://uz.wikipedia.org/wiki/Bosh_Sahifa" 
+        target="_blank">Artikllar</a>
       </nav>
       <h1>
         <img
