--- a/final/02-HTML/login.html
+++ b/final/02-HTML/login.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-     <title>Login</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Login</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="index.html">Asosiy sahifa</a>
+        <a href="profile.html">Profil</a>
+      </nav>
+      <h1>
+        
+        Login sahifasi
+      </h1>
+    </header>
+  </body>
 </html>
